# p1

./: .env.example  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  server.py  项目概述.md
data/: candidates.json
skills/oculai-pipeline/: SKILL.md
skills/oculai-pipeline/agents/: openai.yaml
skills/oculai-pipeline/references/: architecture.md  data-sources.md  deployment.md
skills/oculai-pipeline/scripts/: check_oculai_project.py
sql/: 001_initial_schema.sql
src/oculai/: __init__.py  config.py  embedding.py  jd_parser.py  models.py  pipeline.py  postgres_repository.py  repositories.py  scoring.py
src/oculai/sources/: __init__.py  arxiv.py  base.py  browser_profiles.py  dblp.py  github.py  scholarly.py
tests/: test_pipeline.py
web/: app.js  index.html  styles.css
