[project]
name = "oculai"
version = "0.1.0"
description = "AI-native talent sourcing and ranking pipeline"
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.29.0",
  "cachetools>=5.3.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "sentence-transformers>=3.0.0",
  "uvicorn>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0"
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

